--- a/judge.toml
+++ b/judge.toml
@@ -1,5 +1,5 @@
 [jobs.c0]
 image = {source = "dockerfile", path = ".", tag = "c0-java"}
 run = [
-  "java App --generate $input -o $asm",
+  "java App --generate $input $asm",
 ]
